# python_poetry_test

./: pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  node.js.yml
my_app/: main.py
tests/: test_my_app.py
