[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["arsalanendor <aahmed@endor.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
